canary/overlays/openshift/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rollout-vsvc
spec:
  gateways:
  - canary-gateway
  hosts:
  - "*"
  http:
  - name: primary        # referenced in canary.trafficRouting.istio.virtualService.routes
    route:
    - destination:
        host: rollouts-demo-stable # referenced in canary.stableService
      weight: 100
    - destination:
        host: rollouts-demo-canary # referenced in canary.canaryService
      weight: 0
